[package]
name = "todo"
version = "0.1.0"
authors = ["Reza Muhammad <rezmuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

# Requirements for sqlx, refinery and barrel
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-tokio-rustls", "mysql", "macros", "uuid", "chrono", "json" ] }
refinery = { version = "0.5.0", features = ["mysql"] }
barrel = { version = "0.6.5", features = ["mysql"] }

# Tonic-related
tonic = "0.4.0"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "sync", "time"] }

# Error type handling
anyhow = "1.0.31"

[build-dependencies]
tonic-build = "0.2"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

[[bin]]
name = "todo"
path = "src/main.rs"
